--- a/fsrs4anki_optimizer.ipynb
+++ b/fsrs4anki_optimizer.ipynb
@@ -48,6 +48,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [
+          "parameters"
+        ]
+      },
+      "outputs": [],
+      "source": [
+        "# params\n",
+        "ming_data_file = \"xxx.apkg\"\n",
+        "ming_next_day_start = 4"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {
         "id": "iqP70_-3EUhi"
@@ -56,7 +71,7 @@
       "source": [
         "# Here are some settings that you need to replace before running this optimizer.\n",
         "\n",
-        "filename = \"collection-2022-09-18@13-21-58.colpkg\"\n",
+        "filename = ming_data_file\n",
         "# If you upload deck file, replace it with your deck filename. E.g., ALL__Learning.apkg\n",
         "# If you upload collection file, replace it with your colpgk filename. E.g., collection-2022-09-18@13-21-58.colpkg\n",
         "\n",
@@ -65,7 +80,7 @@
         "timezone = 'Asia/Shanghai'\n",
         "\n",
         "# Replace it with your Anki's setting in Preferences -> Scheduling.\n",
-        "next_day_starts_at = 4\n",
+        "next_day_starts_at = ming_next_day_start\n",
         "\n",
         "# Replace it if you don't want the optimizer to use the review logs before a specific date.\n",
         "revlog_start_date = \"2006-10-05\"\n"
@@ -113,9 +128,9 @@
       "source": [
         "%pip install -q 'fsrs4anki_optimizer @ git+https://github.com/open-spaced-repetition/fsrs4anki@v3.19.0#subdirectory=package'\n",
         "# for local development\n",
-        "# import os\n",
-        "# import sys\n",
-        "# sys.path.insert(0, os.path.abspath('./package/fsrs4anki_optimizer'))\n",
+        "import os\n",
+        "import sys\n",
+        "sys.path.insert(0, os.path.abspath('./package/fsrs4anki_optimizer'))\n",
         "import fsrs4anki_optimizer as optimizer\n",
         "optimizer = optimizer.Optimizer()\n",
         "optimizer.anki_extract(filename)"
@@ -485,6 +500,19 @@
         }
       ],
       "source": [
+        "# ----- 输出我们的文件\n",
+        "import json\n",
+        "  \n",
+        "# Opening JSON file\n",
+        "m_f = open('../output.json',encoding=\"utf-8\",mode=\"w\")\n",
+        "  \n",
+        "# returns JSON object as \n",
+        "# a dictionary\n",
+        "m_data = json.dump({\"w\":optimizer.w},m_f)\n",
+        "\n",
+        "m_f.close()\n",
+        "# -----\n",
+        "\n",
         "print(optimizer.w)"
       ]
     },
