--- a/fsrs4anki_optimizer.ipynb
+++ b/fsrs4anki_optimizer.ipynb
@@ -58,7 +58,8 @@
       "source": [
         "# params\n",
         "ming_data_file = \"xxx.apkg\"\n",
-        "ming_next_day_start = 4"
+        "ming_next_day_start = 4\n",
+        "ming_output_file=\"output.json\""
       ]
     },
     {
@@ -504,7 +505,7 @@
         "import json\n",
         "  \n",
         "# Opening JSON file\n",
-        "m_f = open('../output.json',encoding=\"utf-8\",mode=\"w\")\n",
+        "m_f = open(ming_output_file,encoding=\"utf-8\",mode=\"w\")\n",
         "  \n",
         "# returns JSON object as \n",
         "# a dictionary\n",
