--- a/fsrs4anki_optimizer.ipynb
+++ b/fsrs4anki_optimizer.ipynb
@@ -51,7 +51,8 @@
         "# params\n",
         "ming_data_file = \"xxx.apkg\"\n",
         "ming_next_day_start = 4\n",
-        "ming_output_file=\"output.json\""
+        "ming_output_file=\"output.json\"\n",
+        "ming_filter_out_suspended_cards = True"
       ]
     },
     {
@@ -79,7 +80,7 @@
         "revlog_start_date = \"2006-10-05\"\n",
         "\n",
         "# Set it to True if you don't want the optimizer to use the review logs from suspended cards.\n",
-        "filter_out_suspended_cards = False"
+        "filter_out_suspended_cards = ming_filter_out_suspended_cards"
       ]
     },
     {
@@ -124,12 +125,12 @@
         }
       ],
       "source": [
-        "%pip install -q FSRS-Optimizer==4.6.0\n",
+        "# pip install -q FSRS-Optimizer==4.6.0\n",
         "# for local development\n",
         "import os\n",
         "import sys\n",
         "sys.path.insert(0, os.path.abspath('../fsrs-optimizer/src/fsrs_optimizer/'))\n",
-        "import fsrs4anki_optimizer as optimizer\n",
+        "import fsrs_optimizer as optimizer\n",
         "optimizer = optimizer.Optimizer()\n",
         "optimizer.anki_extract(filename, filter_out_suspended_cards)"
       ]
@@ -1370,7 +1371,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.11.0"
     },
     "vscode": {
       "interpreter": {
